header bugado como sempre

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&family=Permanent+Marker&display=swap');
 
-
+/* INTERFACE */
 *{
     scroll-behavior: smooth;
 }
@@ -13,11 +13,126 @@
 }
 
 [data-tema="light"]{
-    --planofundo: #d7cfd9;
-    --cor-primaria-texto:353535;
-    
+    --planofundo: #f8fcff;
+    --cor-primaria-texto: #353535;
+    --cor-botao: #fff2cc;
+    --degrade: linear-gradient(to top, #f8fcff, #ead1dc);
+    --fundo-scrollbar-track: #d7cfd9;
+    --fundo-scrollbar-thumb: #674ea7;
+    --titulo: #8e7cc3;
+    --shadow-text: #990000;
+    --telefone: limegreen;
 }
 
-button{
+::-webkit-scrollbar-track{
+    background-color: var(--fundo-scrollbar-track);
     border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb{
+    background-color: var(--fundo-scrollbar-thumb);
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar{
+    width: 0.3rem;
+}
+
+/* BOTÕES */
+
+button{
+    border-radius: 2rem;
+    text-decoration: none;
+    font-size: 15px;
+    transition: .3s;
+    padding: 7px;
+}
+
+#btTrocaTema{
+    width: 5%;
+}
+
+#titulo-secao,
+#nome-curriculo{
+    font-family: "Orbitron", sans-serif;
+}
+
+
+header a :hover{
+    transform: scale(1.1);
+}
+
+header{
+    width: 100%;
+    background-image: var(--degrade);
+    align-items: center;
+    padding: 10px;
+    display: flex;
+    justify-content:space-evenly;
+    position: fixed;
+}
+
+
+header nav ul{
+    list-style: none;
+}
+
+header nav ul li{
+    display: inline-block;
+}
+
+body{
+    margin: 0 auto;
+    font-size: 20px;
+    font-family: "DM Sans", sans-serif;
+    font-weight: 200;
+    background-color: var(--planofundo);
+}
+
+.titulo-secao{
+    text-transform: uppercase;
+    font-family: "Orbitron";
+    color: var(--titulo);
+    font-size: 2rem;
+    padding: 1rem;
+    margin: 1rem;
+    text-shadow: 1px 1px 1px var(--shadow-text);
+}
+
+.sobre
+
+.telefone{
+    color: var(--telefone)
+}
+
+.social{
+    text-decoration: none;
+    text-align: left;
+    color: var(--cor-primaria-texto);
+}
+
+
+p{
+    line-height: 1.5;
+    margin: 1rem, 0;
+    color: var(--cor-primaria-texto);
+}
+
+a{
+    text-decoration: none;
+    font-size: 1.5rem;
+    margin-left: .7rem;
+}
+
+li, h2{
+    font-size: 1.5rem;
+    color: var(--cor-primaria-texto);
+}
+
+h3{
+    color: var(--cor-primaria-texto);
+}
+
+#titulo-secao{
+    font-family: "Orbitron", sans-serif;
 }
