--- a/style.css
+++ b/style.css
@@ -17,12 +17,32 @@
     --cor-primaria-texto: #353535;
     --cor-botao: #fff2cc;
     --degrade: linear-gradient(to top, #f8fcff, #ead1dc);
+    --artigo: linear-gradient(to bottom right, #ffc2c2, 
+    #e1ceff);
     --fundo-scrollbar-track: #d7cfd9;
     --fundo-scrollbar-thumb: #674ea7;
     --titulo: #8e7cc3;
     --shadow-text: #990000;
     --telefone: limegreen;
+    --cor-fundo-tags:#aec3b0;
 }
+
+/* Estilizando a barra de rolagem no Firefox */
+* {
+    scrollbar-color: var(--fundo-scrollbar-thumb) var(--fundo-scrollbar-track);
+    scrollbar-width: thin; /* ou auto */
+  }
+  
+  /* Opcional: Estilizando o track (trilha) da barra de rolagem */
+  *::-moz-scrollbar-track {
+    background-color: var(--fundo-scrollbar-track);
+  }
+  
+  /* Opcional: Estilizando o thumb (ponteiro) da barra de rolagem */
+  *::-moz-scrollbar-thumb {
+    background-color: var(--fundo-scrollbar-thumb);
+  }
+  
 
 ::-webkit-scrollbar-track{
     background-color: var(--fundo-scrollbar-track);
@@ -35,7 +55,18 @@
 }
 
 ::-webkit-scrollbar{
-    width: 0.3rem;
+    width: .3rem;
+}
+
+#apresentacao,
+#formacao-academica,
+#experiencia-profissional,
+#hard-skills,
+#soft-skills,
+#idiomas{
+    width: 80vw;
+    margin: auto;
+    padding: var(--padding-padrao-secao);
 }
 
 /* BOTÕES */
@@ -45,7 +76,7 @@ button{
     text-decoration: none;
     font-size: 15px;
     transition: .3s;
-    padding: 7px;
+    
 }
 
 #btTrocaTema{
@@ -68,7 +99,7 @@ header{
     align-items: center;
     padding: 10px;
     display: flex;
-    justify-content:space-evenly;
+    justify-content:space-between;
     position: fixed;
 }
 
@@ -125,7 +156,7 @@ a{
 }
 
 li, h2{
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     color: var(--cor-primaria-texto);
 }
 
@@ -133,6 +164,95 @@ h3{
     color: var(--cor-primaria-texto);
 }
 
-#titulo-secao{
+.hard{
+    color: orange;
+    font-family: "Orbitron";
+    font-size: 2rem;
+    margin: 1rem;
+    padding: 1rem;
+    text-shadow: 1px 1px 1px red;
+}
+
+.soft{
+    color: aqua;
     font-family: "Orbitron", sans-serif;
+    font-size: 2rem;
+    margin: 1rem;
+    padding: 1rem;
+    text-shadow: 1px 1px 1px cornflowerblue;
+}
+
+/*ARTIGOS*/
+
+
+#artigo{
+    background-image: var(--artigo);
+    padding: .7rem;
+    width: 30%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.autor{
+    font-style: oblique;
+    font-weight: 600;
+    font-size: 80%;
+}
+
+.data{
+    font-style: oblique;
+    font-size: 80%;
+}
+
+.continue-lendo{
+    background-color: var(--cor-primaria-texto);
+    padding: .5rem 1rem;
+    margin-top: 1rem;
+    border-radius: 8px;
+    color: white;
+}
+
+.continue-lendo a{
+    text-decoration: none;
+}
+
+.first{
+    text-shadow: none;
+}
+
+article p{
+    text-align: justify;
+    margin-bottom: 1rem;
+    height: 130px;
+    overflow: hidden;
+}
+
+#artigo p, h1, h2{
+    font-family: "DM Sans", sans-serif;
+    text-align: justify;
+    display: flex;
+    justify-content: space-evenly;}
+
+article h1{
+    font-size: 2rem;
+    font-weight: bold;
+    text-align: center;
+}
+
+article h2{
+    font-size: 1.5rem;
+    font-weight: 600;
+}
+
+main{
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.lista-tags li{
+    display: inline-block;
+    background-color: var(--cor-fundo-tags);
+    padding: 5px;
+    border-radius: 4px;
+    margin: 5px 0;
 }
