--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 body {
     height: 100dvh;
     width: 100vw;
+    background-color: #090E11;
+    color: aliceblue;
 }
 
 /* MENU */
@@ -8,11 +10,78 @@ body {
 .menu-navegacao {
     display: inline-flex;
     width: 100%;
-    height: 25px;
-    background-color: cadetblue ;
+    height: 45px;
+    background-color: #212628;
+}
+
+.menu-navegacao > ul {
+    margin: 15px;
 }
 
 #ramon {
     font-family: monospace;
+    font-size: 1rem;
     white-space: pre;
+    margin: 15px;
+}
+
+/* secao 1 */
+
+.secao-apresentacao {
+    display: flex;
+    flex-direction: column;
+    margin: 15px;
+    gap: 25px;
+    text-align: justify;
+}
+
+.foto-apresentacao {
+    width: 250px;
+    height: 250px;
+    background-image: url(/img/160602381.jpg);
+    background-size: cover;
+    border: 1px solid yellow;
+    border-radius: 50%;
+    position: absolute;
+    top: 7%;
+    right: 7%;
+
+}
+
+/* secao 2 & 3 */
+.intro-habilidades {
+    display: flex;
+    justify-content: center;
+}
+
+.habilidades {
+    display: flex;
+    justify-content: center;
+    gap: 3rem;
+}
+
+.secao-habilidades-um {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    border: 1px solid cyan;
+}
+
+.secao-habilidades-um > ul {
+    display: flex;
+    justify-content: space-evenly;
+    margin: 15px;
+}
+
+.secao-habilidades-dois {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    border: 1px solid red;
+}
+
+.secao-habilidades-dois > ul {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
